# 2026_1-vocabulary_quiz_app

./: .gitignore  README.md  pyproject.toml
tests/: pytest.ini
tests/unit/: test_quiz_logic.py
vocabulary_quiz_app/: __init__.py  app.py  data.py  main.py  quiz_logic.py
